--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,38 @@
-<<<<<<< Updated upstream
-=======
-
->>>>>>> Stashed changes
-.app_body{
-  display: grid;
-  background-color: #b6ecec;
-  height: 100vh;
-  
+.App {
+  text-align: center;
 }
 
-.app_body{
-  display:flex;
-  background-color:#8dd6f8;
-  height:90vh;
-  width: 90vw;
-  box-shadow: -1px 4px 20px -6px cadetblue(0, 0, 0, 0.4);
-<<<<<<< Updated upstream
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-=======
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
->>>>>>> Stashed changes
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
