--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -50,3 +50,9 @@
     outline-width: 0;
     margin-left: 10px;
 }
+
+.sidebar_chats{
+    flex: 1;
+    background-color: white;
+    overflow: scroll;
+}
