--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .app {
   display: grid;
   place-items: center;
-  background-color: #dadbd3;
+  background-color: #dfc6d5;
   height: 100vh;
 }
 
 .app_body{
   display: flex;
-  background-color: #ededed;
+  background-color: hsl(194, 65%, 77%);;
   margin-top: -50px;
   height: 90vh;
   width: 90vw;
