--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  border-right: 1px solid lightgrey;
+  border-right: 1px solid rgb(196, 235, 233);
 }
 
 .sidebar_headerRight {
